<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2013 The CyanogenMod Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
 -->
<resources>
    <string name="app_name">Advanced settings</string>

    <!-- Page Headers -->
    <string name="tab_general_title">GENERAL</string>
    <string name="tab_performance_title">PERFORMANCE</string>
    <string name="tab_touchkey_title">TOUCHKEY</string>
    <string name="tab_bln_title">BLN</string>

    <!-- Page General -->
    <string name="category_screen_title">Screen</string>
    <string name="g_sensor_title">Horizontal calibration</string>
    <string name="g_sensor_summary">Calibrate horizontally using accelerometer</string>
    <string name="gsensor_ready">Place device on a level surface and tap Calibrate</string>
    <string name="gsensor_calibrating">Calibrating. Do not move device. Please wait...</string>
    <string name="gsensor_nofile">Unable to find offset file. Try again</string>
    <string name="gsensor_end">Calibrated</string>
    <string name="gsensor_button1">Complete</string>
    <string name="gsensor_button2">Calibrate</string>

    <string name="category_fast_charge_title">Fast Charge Support</string>
    <string name="force_fast_charge_usbwarning">Remove the USB cable</string>
    <string name="force_fast_charge">Force Fast Charge</string>
    <string name="force_fast_charge_summary">Detect USB-connected PC as USB Wall Charger, for faster charging mode</string>

    <string name="category_otg_title">USB-OTG</string>
    <string name="otg_power_title">USB-OTG Mode</string>
    <string name="otg_power_summary">Select whether you prefer to enable USB OTG power (Powered) or keep the phone waterproof (Unpowered).\nIn unpowered mode an external power source and a Y-cable are needed to power OTG devices. Select "Unpowered + Charge" to additionally charge the phone from the external power source</string>

    <string name="category_bluetooth_title">Bluetooth</string>
    <string name="a2dp_sink_title">A2DP Sink</string>
    <string name="a2dp_sink_summary_on">A2DP Sink is enabled, A2DP Source is disabled</string>
    <string name="a2dp_sink_summary_off">A2DP Sink is disabled, A2DP Source is enabled</string>
    <string name="a2dp_sink_error_bt_active">Bluetooth must be deactivated before changing A2DP mode.</string>

    <!-- Page Performance -->
    <string name="category_performance_title">Performance</string>
    <string name="highend_gfx_title">High-End GFX Switch</string>
    <string name="highend_gfx_summary_on">High-End graphic effects are enabled, features like transparent lock screen, status and notification bars are enabled</string>
    <string name="highend_gfx_summary_off">High-End graphic effects are disabled, features like transparent lock screen, status and notification bars are disabled</string>
    <string name="highend_gfx_error">Impossible to set High-End GFX setting, please grant the root permissions for this app.</string>

    <string name="low_ram_title">Low RAM Switch</string>
    <string name="low_ram_summary_on">Low RAM is enabled, large-RAM features are disabled</string>
    <string name="low_ram_summary_off">Low RAM is disabled, large-RAM features are enabled</string>
    <string name="low_ram_error">Impossible to set LowRam setting, please grant the root permissions for this app.</string>

    <string name="category_apps_services_title">Apps and Services</string>
    <string name="max_bg_apps_title">Max background apps</string>
    <string name="max_bg_apps_summary">Set the max number of apps that can run in background at the same time</string>
    <string name="max_bg_apps_error">Impossible to set max background apps, please grant the root permissions for this app.</string>

    <string name="max_bg_services_title">Max background services</string>
    <string name="max_bg_services_summary">Set the max number of services that can run in background at the same time</string>
    <string name="max_bg_services_error">Impossible to set max background services, please grant the root permissions for this app.</string>

    <string name="reboot_alert">To apply the setting, a reboot is required.\nWould you like to reboot now?\n\nPress Yes to reboot now, No if you prefer to reboot later.</string>
    <string name="reboot_wait">The device will be rebooted in %1$d seconds, please wait.</string>
    <string name="reboot_yes">Yes</string>
    <string name="reboot_no">No</string>

    <!-- Page TouchKey -->
    <string name="category_touchkey_title">Touch Keys</string>
    <string name="backlight_timeout_title">Backlight Timeout</string>
    <string name="backlight_timeout_summary">Adjust the delay before the touch key backlight automatically turns off</string>
    <string name="touchlight_status_title">Backlight on Touchscreen Press</string>
    <string name="touchlight_status_summary">Activation status of touchkeys backlight on touchscreen press</string>

    <string name="category_pkfmanager_title">Phantom key presses</string>
    <string name="pkfmanager_title">Phantom key presses filter</string>
    <string name="pkfmanager_summary">Filter the unwanted key presses caused by antenna interference (external application)</string>

    <!-- Page BLN -->
    <string name="category_bln_title">Backlight Notification</string>
    <string name="bln_type_title">Notification Type</string>
    <string name="bln_type_summary">Set the way a notification will be reported by touchkey lights</string>
    <string name="bln_blink_timeout_title">Blinking Lights Timeout</string>
    <string name="bln_blink_timeout_summary">Set the duration time of blinking lights</string>
    <string name="bln_blink_interval_on_title">Blink ON Interval</string>
    <string name="bln_blink_interval_on_summary">Set the duration interval of each blink ON</string>
    <string name="bln_blink_interval_off_title">Blink OFF Interval</string>
    <string name="bln_blink_interval_off_summary">Set the duration interval of each blink OFF</string>
    <string name="bln_static_timeout_title">Static Lights Timeout</string>
    <string name="bln_static_timeout_summary">Set the duration time of static lights</string>
</resources>
